--- a/public/css/product.css
+++ b/public/css/product.css
@@ -4,33 +4,22 @@
   margin: auto;
 }
 
-.form-control {
-  margin: 1rem 0;
+.product-item {
+  width: 20rem;
+  max-width: 95%;
 }
 
-.product-form label,
-.product-form input {
-  display: block;
-  width: 100%;
+.product__title {
+  font-size: 1.2rem;
+  text-align: center;
 }
 
-.product-form input {
-  border: 1px solid rgb(43, 240, 230);
-  font: inherit;
-  border-radius: 2px;
+.product__price {
+  text-align: center;
+  color: #4d4d4d;
+  margin-bottom: 0.5rem;
 }
 
-button {
-  font: inherit;
-  border: 1px solid rgb(102, 37, 223);
-  color: rgb(102, 37, 223);
-  background-color: white;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-button:hover,
-button:active {
-  background-color: rgb(102, 37, 223);
-  color: white;
+.product__description {
+  text-align: center;
 }
